# Twitter_Stream_Rust

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: 4.pack  index.pack  index.pack.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack  index.pack.old
frontend/.next/cache/webpack/server-development/: 0.pack  1.pack  index.pack  index.pack.old
frontend/.next/server/: _error.js  client-reference-manifest.js  client-reference-manifest.json  flight-server-css-manifest.js  flight-server-css-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js
frontend/.next/server/pages/: _app.js  _document.js  _error.js
frontend/.next/static/chunks/: _error.js  amp.js  app-client-internals.js  webpack.js
frontend/.next/static/webpack/: 23d09a5e70665094.webpack.hot-update.json  a6145e73d12dee2b.webpack.hot-update.json  amp.a6145e73d12dee2b.hot-update.js  b8f81bab9ebd51e1.webpack.hot-update.json  main-app.23d09a5e70665094.hot-update.js  main.a6145e73d12dee2b.hot-update.js  webpack.02fa9ffe0b0c69ff.hot-update.js  webpack.23d09a5e70665094.hot-update.js  webpack.264f997e017cce89.hot-update.js  webpack.6ed028134b14233d.hot-update.js  webpack.a6145e73d12dee2b.hot-update.js  webpack.b8f81bab9ebd51e1.hot-update.js  webpack.e74315459f196621.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: page.js
frontend/components/: ws.js
twitter-streaming/: Cargo.toml
twitter-streaming/src/: main.rs
(+15 files in other folders)
