[package]
name = "twitter-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.3.0"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15.0"
twitter-stream = "0.3.2"
dotenv = "0.15.0"

